# Hydro

./: CMakeLists.txt  Cargo.toml  README.md  build.bat  main.cpp  main.frag  main.vert  triangle.frag  triangle.vert
exercises/: 1.rs  2.rs  3.rs  4.rs  5.rs  6.rs
exercises/shaders/: 3.vert  5.frag
include/: Application.h
include/Core/: Event.h  Events.h  KeyEvent.h  Logger.h  Window.h
include/Events/: Event.h  KeyEvent.h  MouseEvent.h
include/Graphics/: IndexBuffer.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h
lib/: spdlog.lib
shaders/: main.frag  main.vert  triangle.frag  triangle.vert  triangle1.frag  triangle2.frag
src/: Application.cpp  app.rs  lib.rs  main.rs  renderer.rs  shader.rs  texture.rs  vertex.rs  window.rs
src/Core/: Logger.cpp  Window.cpp
src/Events/: KeyEvent.cpp  MouseEvent.cpp
src/Graphics/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
src/core/: events.rs  mod.rs  window.rs
src/graphics/: index_buffer.rs  mod.rs  renderer.rs  shader.rs  texture.rs  vertex_array.rs  vertex_buffer.rs
src/reexports/: mod.rs
