[package]
name = "hydro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
glfw = "0.54"
glm = "0.2.3"
image = "0.24.8"
log = "0.4.20"
nalgebra = "0.32.3"
thiserror = "1.0.56"
